[gd_scene load_steps=28 format=3 uid="uid://dpvptcshibxt0"]

[ext_resource type="Script" uid="uid://d2bd4ujy5qv0c" path="res://scene/game_objects/player/src/player.gd" id="1_heqc5"]
[ext_resource type="PackedScene" uid="uid://b0xrjstrhdb1c" path="res://scene/abilities/dash_attack/dash_attack_controller.tscn" id="2_jxsrc"]
[ext_resource type="PackedScene" uid="uid://brb3xhgavq8gl" path="res://scene/abilities/parry/parry_controller.tscn" id="3_tyng1"]
[ext_resource type="Script" uid="uid://cyitjknl16852" path="res://scripts/data/damage/damage_data.gd" id="4_1tyhs"]
[ext_resource type="PackedScene" uid="uid://ylbo2us2j26j" path="res://scene/components/health_component/health_component.tscn" id="4_48qb4"]
[ext_resource type="PackedScene" uid="uid://cy5ulo0hqp2s1" path="res://scene/components/armor_component/armor_component.tscn" id="5_ju00n"]
[ext_resource type="Script" uid="uid://derbmady170hu" path="res://scene/components/movement_component/player_movement_component.gd" id="7_1tyhs"]
[ext_resource type="Script" uid="uid://5m7cpflvnie8" path="res://base/state_machine.gd" id="7_heqc5"]
[ext_resource type="PackedScene" uid="uid://bl380xv78onc8" path="res://scene/components/effect_receiver/effect_receiver.tscn" id="10_0ygly"]
[ext_resource type="Texture2D" uid="uid://dhp5osadbdkr5" path="res://assets/player/PARRY/PARRY1.png" id="12_vedbf"]
[ext_resource type="Texture2D" uid="uid://bki6nmequas25" path="res://assets/player/PARRY/PARRY2.png" id="13_siiro"]
[ext_resource type="Texture2D" uid="uid://w350vu7k8qr0" path="res://assets/player/PARRY/PARRY3.png" id="14_rlg5u"]
[ext_resource type="Texture2D" uid="uid://cn77e8twpbo18" path="res://assets/player/PARRY/PARRY4.png" id="15_k07tp"]
[ext_resource type="Texture2D" uid="uid://d4h4hbl1awmct" path="res://assets/player/TAKE_DAMAGE/TAKE_DAMAGE1.png" id="16_plpdn"]
[ext_resource type="PackedScene" uid="uid://csmleslly1twg" path="res://scene/game_objects/player/player_hurt_box.tscn" id="16_wfn55"]
[ext_resource type="Texture2D" uid="uid://cruub30w2sp85" path="res://assets/player/TAKE_DAMAGE/TAKE_DAMAGE2.png" id="17_t526v"]
[ext_resource type="Texture2D" uid="uid://bpjpcvpp0hyai" path="res://assets/player/TAKE_DAMAGE/TAKE_DAMAGE3.png" id="18_uufy7"]
[ext_resource type="Texture2D" uid="uid://bela1taq0jaww" path="res://assets/player/IDLE/IDLE1.png" id="19_edl67"]
[ext_resource type="Texture2D" uid="uid://dghf3ps4535s5" path="res://assets/player/IDLE/IDLE2.png" id="20_t4lt5"]
[ext_resource type="Texture2D" uid="uid://bw40qjgannsa5" path="res://assets/player/IDLE/IDLE3.png" id="21_jyiia"]
[ext_resource type="Texture2D" uid="uid://dwu4r1do2wjtw" path="res://assets/player/MOVEMENT/MOVEMENT1.png" id="22_dx8m4"]
[ext_resource type="Texture2D" uid="uid://hhptcad8220n" path="res://assets/player/MOVEMENT/MOVEMENT2.png" id="23_jpk7t"]
[ext_resource type="Texture2D" uid="uid://bhralc6qy0wmp" path="res://assets/player/MOVEMENT/MOVEMENT3.png" id="24_y1s0g"]

[sub_resource type="Resource" id="Resource_siiro"]
script = ExtResource("4_1tyhs")
metadata/_custom_type_script = "uid://cyitjknl16852"

[sub_resource type="SpriteFrames" id="SpriteFrames_heqc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_vedbf")
}, {
"duration": 1.0,
"texture": ExtResource("13_siiro")
}, {
"duration": 1.0,
"texture": ExtResource("14_rlg5u")
}, {
"duration": 1.0,
"texture": ExtResource("15_k07tp")
}],
"loop": false,
"name": &"block",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_plpdn")
}, {
"duration": 1.0,
"texture": ExtResource("17_t526v")
}, {
"duration": 1.0,
"texture": ExtResource("18_uufy7")
}],
"loop": false,
"name": &"hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_edl67")
}, {
"duration": 1.0,
"texture": ExtResource("20_t4lt5")
}, {
"duration": 1.0,
"texture": ExtResource("21_jyiia")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_dx8m4")
}, {
"duration": 1.0,
"texture": ExtResource("23_jpk7t")
}, {
"duration": 1.0,
"texture": ExtResource("24_y1s0g")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lfjyr"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_p0vsu"]
points = PackedVector2Array(8, 7, -8, 7, 0, -8)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_heqc5")

[node name="AbilityManager" type="Node" parent="."]

[node name="DashAttackController" parent="AbilityManager" instance=ExtResource("2_jxsrc")]
unique_name_in_owner = true
damage_data = SubResource("Resource_siiro")
damage_type = 1
dash_attack_range = 2000.0
attack_cd = 0.1

[node name="ParryController" parent="AbilityManager" instance=ExtResource("3_tyng1")]
unique_name_in_owner = true

[node name="MovementComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_1tyhs")
max_speed = 200.0
acceleration = 7.5

[node name="HealthComponent" parent="." instance=ExtResource("4_48qb4")]
unique_name_in_owner = true
max_health = 50.0

[node name="ArmorComponent" parent="." instance=ExtResource("5_ju00n")]
unique_name_in_owner = true

[node name="EffectReceiver" parent="." instance=ExtResource("10_0ygly")]

[node name="PlayerStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_heqc5")

[node name="GracePeriod" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 3
sprite_frames = SubResource("SpriteFrames_heqc5")
animation = &"run"
autoplay = "idle"
frame_progress = 0.71018

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lfjyr")

[node name="PlayerHurtBox" parent="." node_paths=PackedStringArray("health_component") groups=["player_hurt_box"] instance=ExtResource("16_wfn55")]
unique_name_in_owner = true
collision_layer = 256
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="HurtBoxShape" type="CollisionShape2D" parent="PlayerHurtBox"]
unique_name_in_owner = true
shape = SubResource("ConvexPolygonShape2D_p0vsu")
